--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Add Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <title>Assignment 01</title>
 </head>
+
 <body>
-    
+    <!-- First Page -->
+    <section class="first-page">
+        <h1 class="first-heading-design">Let’s Help Those Who<br /> Are More In Need</h1>
+        <p class="first-page-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel enim ut eaque velit
+            voluptates expedita qui fugiat praesentium, est earum?</p>
+            <a class="first-link-button" target="_blank" href="">Donate Now</a>
+    </section>
+    <!-- <Second Page -->
 </body>
+
 </html>
