second page added

--- a/index.html
+++ b/index.html
@@ -17,12 +17,48 @@
 <body>
     <!-- First Page -->
     <section class="first-page">
-        <h1 class="first-heading-design">Let’s Help Those Who<br /> Are More In Need</h1>
-        <p class="first-page-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel enim ut eaque velit
-            voluptates expedita qui fugiat praesentium, est earum?</p>
-            <a class="first-link-button" target="_blank" href="">Donate Now</a>
+        <div class="first-page-contain">
+            <h1 class="first-heading-design">Let’s Help Those Who<br /> Are More In Need</h1>
+            <p class="first-page-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel enim ut eaque
+                velit
+                voluptates expedita qui fugiat praesentium, est earum?</p>
+                <div class="btn-container">
+                    <a class="link-button" target="_blank" href="">Donate Now</a>
+                </div>
+        </div>
     </section>
     <!-- <Second Page -->
+    <section class="second-page">
+        <h1 class="second-page-heading">
+            Donate Today
+        </h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam quae beatae facilis eveniet officia aliquid
+            perspiciatis rerum dicta. Aperiam, qui eius quibusdam
+        </p>
+        <div class="price-card-container">
+            <div class="price-card">
+                <h1>100tk</h1>
+            </div>
+            <div id="top-price-card">
+                <h1>500tk</h1>
+            </div>
+            <div class="price-card">
+                <h1>1000tk</h1>
+            </div>
+            <div class="price-card">
+                <h1>10000tk</h1>
+            </div>
+            <div class="price-card">
+                <h1>15000tk</h1>
+            </div>
+        </div>
+        <p>Other Amount (Taka)</p>
+        <hr/>
+        <div class="btn-container">
+            <a class="link-button" target="_blank" href="">Donate Now</a>
+        </div>
+    </section>
 </body>
 
 </html>
