third page added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
     </section>
+    <section class="third-page">
+        <h1 class="third-page-heading">Donate Plan</h1>
+        <div class="blogs-container">
+            <div id="first-blog" class="blogs">
+                <img src="icons/clothes.svg" alt="">
+                <h1>Target</h1>
+                <p>Your main target is how you will finish the programming-hero course without any distraction. How to say focus on your work and keep going non-stop</p>
+            </div>
+            <div id="second-blog" class="blogs">
+                <img src="icons/food.png" alt="">
+                <h1>Mission</h1>
+                <p>Your mission is to make yourself a good web developer. Make yourself a quick learner and try to handle very head things efficiently</p>
+            </div>
+            <div id="third-blog" class="blogs">
+                <img src="icons/medicine.svg" alt="">
+                <h1>Goals</h1>
+                <p>You have just only one goal make yourself a web developer at any cost and see yourself as a web developer after finishing the programming-hero course</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
