--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
+    <footer>
+        <h1>Be <span>Humble</span></h1>
+    </footer>
 </body>
 
 </html>
