subscribe page added

--- a/index.html
+++ b/index.html
@@ -19,23 +19,18 @@
     <section class="first-page">
         <div class="first-page-contain">
             <h1 class="first-heading-design">Let’s Help Those Who<br /> Are More In Need</h1>
-            <p class="first-page-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel enim ut eaque
-                velit
-                voluptates expedita qui fugiat praesentium, est earum?</p>
-                <div class="btn-container">
-                    <a class="link-button" target="_blank" href="">Donate Now</a>
-                </div>
+            <p class="first-page-content">Stand beside the flood affected people.</p>
+            <div class="btn-container">
+                <a class="link-button" target="_blank" href="">Donate Now</a>
+            </div>
         </div>
     </section>
     <!-- <Second Page -->
     <section class="second-page">
         <h1 class="second-page-heading">
-            Donate Today
+            Donate Now
         </h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam quae beatae facilis eveniet officia aliquid
-            perspiciatis rerum dicta. Aperiam, qui eius quibusdam
-        </p>
+        <p>Extend your helping hand to the helpless</p>
         <div class="price-card-container">
             <div class="price-card">
                 <h1>100tk</h1>
@@ -54,28 +49,39 @@
             </div>
         </div>
         <p>Other Amount (Taka)</p>
-        <hr/>
+        <hr />
         <div class="btn-container">
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
     </section>
     <section class="third-page">
-        <h1 class="third-page-heading">Donate Plan</h1>
+        <h1 class="third-page-heading">Donation Plan</h1>
         <div class="blogs-container">
             <div id="first-blog" class="blogs">
                 <img src="icons/clothes.svg" alt="">
-                <h1>Target</h1>
-                <p>Your main target is how you will finish the programming-hero course without any distraction. How to say focus on your work and keep going non-stop</p>
+                <h1>Clothes</h1>
+                <p>Extend your helping hand to the helpless. They have no clothes to dress in.</p>
             </div>
             <div id="second-blog" class="blogs">
                 <img src="icons/food.png" alt="">
-                <h1>Mission</h1>
-                <p>Your mission is to make yourself a good web developer. Make yourself a quick learner and try to handle very head things efficiently</p>
+                <h1>Food Packge</h1>
+                <p>You can donate to the Food package. Dry foods are included in our food package.</p>
             </div>
             <div id="third-blog" class="blogs">
                 <img src="icons/medicine.svg" alt="">
-                <h1>Goals</h1>
-                <p>You have just only one goal make yourself a web developer at any cost and see yourself as a web developer after finishing the programming-hero course</p>
+                <h1>Medicine</h1>
+                <p>Flood people's badly needed medicine so donate your money for buying medicine.</p>
+            </div>
+        </div>
+    </section>
+    <section class="Subscribe-page">
+        <div class="form-container">
+            <h1 class="Subscribe-heading">Appeal from At-Taqwa Masjid</h1>
+            <div>
+                <form>
+                    <input type="email" placeholder="Email">
+                    <button>Subscribe</button>
+                </form>
             </div>
         </div>
     </section>
