extra page added

--- a/index.html
+++ b/index.html
@@ -74,9 +74,23 @@
             </div>
         </div>
     </section>
+    <!-- Extra part -->
+    <section class="extra_page">
+        <div id="third-page-pic-div" class="feedback-img">
+            <img src="images/feedback.jpg" alt="">
+        </div>
+        <div class="feedback-contant">
+            <h1>Give your feedback to us</h1>
+            <p>In-Sha-Allah It will help us to reinforce positive habits and encourages more of the performance that you
+                want to see.</p>
+            <a target="_blank" class="link-button" href="">Feedback</a>
+        </div>
+    </section>
+
     <section class="Subscribe-page">
         <div class="form-container">
             <h1 class="Subscribe-heading">Appeal from At-Taqwa Masjid</h1>
+            <p>Stand beside the flood affected people</p>
             <div>
                 <form>
                     <input type="email" placeholder="Email">
