--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="first-page">
         <div class="first-page-contain">
             <h1 class="first-heading-design">Let’s Help Those Who<br /> Are More In Need</h1>
-            <p class="first-page-content">Stand beside the flood affected people.</p>
+            <p class="first-page-content">Stand beside the flood affected people</p>
             <div class="btn-container">
                 <a class="link-button" target="_blank" href="">Donate Now</a>
             </div>
@@ -30,7 +30,8 @@
         <h1 class="second-page-heading">
             Donate Now
         </h1>
-        <p>Extend your helping hand to the helpless</p>
+        <p>Extend your helping hand to the helpless. No one has ever become poor by giving. Those who are happiest are
+            those who do the most for others.</p>
         <div class="price-card-container">
             <div class="price-card">
                 <h1>100tk</h1>
@@ -54,8 +55,11 @@
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
     </section>
+    <!-- Third Page  -->
     <section class="third-page">
         <h1 class="third-page-heading">Donation Plan</h1>
+        <p class="donation-blog">There is no exercise better for the heart than reaching down and lifting people
+            up<br />Kindness is one of the greatest gifts you can bestow upon another</p>
         <div class="blogs-container">
             <div id="first-blog" class="blogs">
                 <img src="icons/clothes.svg" alt="">
@@ -64,7 +68,7 @@
             </div>
             <div id="second-blog" class="blogs">
                 <img src="icons/food.png" alt="">
-                <h1>Food Packge</h1>
+                <h1>Food Package</h1>
                 <p>You can donate to the Food package. Dry foods are included in our food package.</p>
             </div>
             <div id="third-blog" class="blogs">
@@ -76,8 +80,10 @@
     </section>
     <!-- Extra part -->
     <section class="extra_page">
-        <div id="third-page-pic-div" class="feedback-img">
-            <img src="images/feedback.jpg" alt="">
+        <div>
+            <img class="feedback-img"
+                src="images/customer-review-concept-with-people-gives-stars-ratings-positive-feedback-isometric-illustration_138260-962.webp"
+                alt="">
         </div>
         <div class="feedback-contant">
             <h1>Give your feedback to us</h1>
@@ -90,7 +96,7 @@
     <section class="Subscribe-page">
         <div class="form-container">
             <h1 class="Subscribe-heading">Appeal from At-Taqwa Masjid</h1>
-            <p>Stand beside the flood affected people</p>
+            <p>Stand beside the flood affected people.Extend your helping hand to the helpless and In-Sha-Allah; Allah will reciprocate.Stay with us.</p>
             <div>
                 <form>
                     <input type="email" placeholder="Email">
@@ -102,6 +108,7 @@
     <!-- Footer -->
     <footer>
         <h1>Be <span>Humble</span></h1>
+        <p>Copyright</p>
     </footer>
 </body>
 
