add input & button page

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 <h1>15000tk</h1>
             </div>
         </div>
-        <p>Other Amount (Taka)</p>
-        <hr />
+        <div class="donation-input"><input type="text" placeholder="Other Amount (Taka)"></input><br/>
+            <button>Donate Now</button>
+        </div>
         <div class="btn-container">
-            <a class="link-button" target="_blank" href="">Donate Now</a>
+            <!-- <a class="link-button" target="_blank" href="">Donate Now</a> -->
         </div>
     </section>
     <!-- Third Page  -->
@@ -96,7 +97,8 @@
     <section class="Subscribe-page">
         <div class="form-container">
             <h1 class="Subscribe-heading">Appeal from At-Taqwa Masjid</h1>
-            <p>Stand beside the flood affected people.Extend your helping hand to the helpless and In-Sha-Allah; Allah will reciprocate.Stay with us.</p>
+            <p>Stand beside the flood affected people.Extend your helping hand to the helpless and In-Sha-Allah; Allah
+                will reciprocate.Stay with us.</p>
             <div>
                 <form>
                     <input type="email" placeholder="Email">
